# ai-dev-kit

./: .gitignore  README.md  databricks.yml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
aidevkit-cli/: pyproject.toml
aidevkit-cli/aidevkit_cli/: main.py
aidevkit-cli/aidevkit_cli/commands/: __init__.py  sql.py
databricks-aidevkit-cli/: pyproject.toml
databricks-aidevkit-cli/aidevkit_cli/: __init__.py  main.py
databricks-builder-app/: README.md  app.yaml.example  pyproject.toml  requirements.txt
databricks-builder-app/client/: package-lock.json  package.json
databricks-builder-app/scripts/: deploy.sh
databricks-mcp-server/: README.md  pyproject.toml
databricks-mcp-server/databricks_mcp_server/: cli_mapping.py  middleware.py
databricks-mcp-server/tests/: conftest.py  test_sql_output_format.py  test_workspace.py
databricks-skills/: README.md  install_genie_code_skills.py  install_skills.sh  install_skills_to_genie_code.sh
databricks-skills/.tests/: __init__.py  conftest.py  run_tests.py  test_agent_bricks_manager.py  test_genie_conversation.py
databricks-skills/databricks-agent-bricks/: 1-knowledge-assistants.md  2-supervisor-agents.md  SKILL.md  manager.py  mas_manager.py
databricks-skills/databricks-ai-functions/: 1-task-functions.md  2-ai-query.md  4-document-processing-pipeline.md  SKILL.md
databricks-skills/databricks-aibi-dashboards/: 1-widget-specifications.md  3-examples.md  3-filters.md  4-examples.md  SKILL.md
databricks-skills/databricks-app-python/: 4-deployment.md  6-cli-approach.md  SKILL.md
databricks-skills/databricks-config/: SKILL.md
databricks-skills/databricks-dbsql/: SKILL.md
databricks-tools-core/: =62.0  README.md  pyproject.toml
scripts/: smoke_check.py
(+138 files in other folders)
