[project]
name = "mcp_databricks_filtering"
version = "0.1.0"
description = "Tag-based table filtering for the Databricks MCP server"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.30,<1.0",
    "sqlglot>=25.0,<27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
mcp-table-filter = "mcp_databricks_filtering.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_databricks_filtering"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "online: tests that require a live Databricks connection",
]
